--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
 # JPA settings
+server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLCDB.localdomain
 spring.datasource.username=ducs2mu132
 spring.datasource.password=duc1302
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+
+# JWT
+jwt.jwtSecret=ekyc2022
+jwt.jwtExpirationMs=86400000
+
+# HikariCP settings
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPool
+
