ducnd config swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=HikariPool
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
